# edge-communication-protocol-rust

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  maturin.yml  rust.yml
src/: avro.rs  lib.rs  message_builder.rs  primitives.rs  protocol.rs  utils.rs
src/message_builder/: media_store.rs  mod.rs
src/message_builder/services/: ffprobe.rs  mod.rs
src/objects/: mod.rs
src/objects/services/: ffprobe.rs  keep_alive.rs  mod.rs  ping.rs
src/objects/services/storage/: mod.rs  notify_message.rs  stream_track_unit_elements.rs  stream_track_units.rs  stream_tracks.rs  unit_element_message.rs
src/protocol/: avro.rs  mod.rs  primitives.rs
src/protocol/objects/: mod.rs
src/protocol/objects/services/: ffprobe.rs  ping.rs
src/protocol/objects/services/storage/: mod.rs  notify_message.rs  stream_track_unit_elements.rs  stream_track_units.rs  stream_tracks.rs  unit_element_message.rs
src/protocol2/: avro.rs  mod.rs  primitives.rs
src/protocol2/objects/: mod.rs
src/protocol2/objects/services/: ffprobe.rs  mod.rs  ping.rs
src/protocol2/objects/services/storage/: mod.rs  notify_message.rs  stream_track_unit_elements.rs  stream_tracks.rs  unit_element_message.rs
