[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.avro-rs]
version = "0.13.0"
features = ["snappy"]

[dependencies]
uuid = "0.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
