[package]
name = "protocol"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.avro-rs]
version = "0.13.0"
features = ["snappy"]

[dependencies.pyo3]
version = "0.16"
features = ["extension-module"]

[dependencies]
uuid = "0.8"
bincode = "1.3"
log = "0.4"


